fixed spacing, padding and responsiveness in about section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,9 +178,24 @@ nav{
 
 
 /*-- about--*/
-#about-img1 {
-    height: 100px;
-    width: 75%;
+.about-container {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+#about-img1{
+    height: 450px;
+    width: 100%;
+}
+
+.montessori-container {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+#about-img2 {
+    height: 450px;
+    width: 100%;
 }
 
 /*--Team--*/
